--- a/index2.html
+++ b/index2.html
@@ -13,6 +13,9 @@
     <img src="img/truskawka.jpg" alt="truskwka" id="truskawka3">
     
     <img src="img/truskawka.jpg" alt="truskwka" id="truskawka4">
+    
+    <img src="img/truskawka.jpg" alt="truskwka" id="truskawka5">
+
 
 
 
