--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,11 @@
     
     <img src="img/truskawka.jpg" alt="truskwka" id="truskawka5">
 
+    <div id="box-out">
+    <div id="box-in"></div>
+    <div id="box-in-2"></div>
 
+    </div>
 
 
 </body>
